add create hpa command

--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -28,6 +28,7 @@ go_library(
         "create_clusterrolebinding.go",
         "create_configmap.go",
         "create_deployment.go",
+        "create_hpa.go",
         "create_namespace.go",
         "create_pdb.go",
         "create_priorityclass.go",
@@ -167,6 +168,7 @@ go_test(
         "create_clusterrolebinding_test.go",
         "create_configmap_test.go",
         "create_deployment_test.go",
+        "create_hpa_test.go",
         "create_namespace_test.go",
         "create_pdb_test.go",
         "create_priorityclass_test.go",
@@ -210,6 +212,7 @@ go_test(
         "//pkg/api/ref:go_default_library",
         "//pkg/api/testapi:go_default_library",
         "//pkg/api/testing:go_default_library",
+        "//pkg/apis/autoscaling:go_default_library",
         "//pkg/apis/batch:go_default_library",
         "//pkg/apis/core:go_default_library",
         "//pkg/apis/extensions:go_default_library",
