Add [sig-node] to some unowned e2e_node tests
Follow the SIGDescribe pattern used in test/e2e/foo tests

--- a/test/e2e_node/BUILD
+++ b/test/e2e_node/BUILD
@@ -12,6 +12,7 @@ go_library(
         "container.go",
         "doc.go",
         "docker_util.go",
+        "framework.go",
         "gpu_device_plugin.go",
         "gpus.go",
         "image_list.go",
