--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -209,6 +209,7 @@ go_test(
     importpath = "k8s.io/kubernetes/pkg/kubectl/cmd",
     library = ":go_default_library",
     deps = [
+        "//pkg/api:go_default_library",
         "//pkg/api/legacyscheme:go_default_library",
         "//pkg/api/ref:go_default_library",
         "//pkg/api/testapi:go_default_library",
