--- a/pkg/kubectl/BUILD
+++ b/pkg/kubectl/BUILD
@@ -207,6 +207,9 @@ filegroup(
         "//pkg/kubectl/metricsutil:all-srcs",
         "//pkg/kubectl/plugins:all-srcs",
         "//pkg/kubectl/proxy:all-srcs",
+        "//pkg/kubectl/reconciliation/v1:all-srcs",
+        "//pkg/kubectl/reconciliation/v1alpha1:all-srcs",
+        "//pkg/kubectl/reconciliation/v1beta1:all-srcs",
         "//pkg/kubectl/resource:all-srcs",
         "//pkg/kubectl/scheme:all-srcs",
         "//pkg/kubectl/testing:all-srcs",
