--- a/pkg/kubelet/cm/BUILD
+++ b/pkg/kubelet/cm/BUILD
@@ -77,9 +77,7 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "container_manager_unsupported_test.go",
-    ] + select({
+    srcs = select({
         "@io_bazel_rules_go//go/platform:linux_amd64": [
             "cgroup_manager_linux_test.go",
             "cgroup_manager_test.go",
@@ -91,11 +89,10 @@ go_test(
     }),
     importpath = "k8s.io/kubernetes/pkg/kubelet/cm",
     library = ":go_default_library",
-    deps = [
-        "//pkg/util/mount:go_default_library",
-    ] + select({
+    deps = select({
         "@io_bazel_rules_go//go/platform:linux_amd64": [
             "//pkg/kubelet/eviction/api:go_default_library",
+            "//pkg/util/mount:go_default_library",
             "//vendor/github.com/stretchr/testify/assert:go_default_library",
             "//vendor/github.com/stretchr/testify/require:go_default_library",
             "//vendor/k8s.io/api/core/v1:go_default_library",
