--- a/staging/src/k8s.io/code-generator/cmd/client-gen/args/BUILD
+++ b/staging/src/k8s.io/code-generator/cmd/client-gen/args/BUILD
@@ -17,6 +17,8 @@ go_library(
     deps = [
         "//vendor/github.com/spf13/pflag:go_default_library",
         "//vendor/k8s.io/code-generator/cmd/client-gen/types:go_default_library",
+        "//vendor/k8s.io/code-generator/pkg/util:go_default_library",
+        "//vendor/k8s.io/gengo/args:go_default_library",
     ],
 )
 
