--- a/staging/src/k8s.io/code-generator/cmd/deepcopy-gen/BUILD
+++ b/staging/src/k8s.io/code-generator/cmd/deepcopy-gen/BUILD
@@ -19,6 +19,7 @@ go_library(
     deps = [
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/github.com/spf13/pflag:go_default_library",
+        "//vendor/k8s.io/code-generator/cmd/deepcopy-gen/args:go_default_library",
         "//vendor/k8s.io/gengo/args:go_default_library",
         "//vendor/k8s.io/gengo/examples/deepcopy-gen/generators:go_default_library",
     ],
@@ -33,6 +34,9 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [":package-srcs"],
+    srcs = [
+        ":package-srcs",
+        "//staging/src/k8s.io/code-generator/cmd/deepcopy-gen/args:all-srcs",
+    ],
     tags = ["automanaged"],
 )
