--- a/staging/src/k8s.io/code-generator/cmd/openapi-gen/BUILD
+++ b/staging/src/k8s.io/code-generator/cmd/openapi-gen/BUILD
@@ -18,6 +18,8 @@ go_library(
     importpath = "k8s.io/code-generator/cmd/openapi-gen",
     deps = [
         "//vendor/github.com/golang/glog:go_default_library",
+        "//vendor/github.com/spf13/pflag:go_default_library",
+        "//vendor/k8s.io/code-generator/cmd/openapi-gen/args:go_default_library",
         "//vendor/k8s.io/gengo/args:go_default_library",
         "//vendor/k8s.io/kube-openapi/pkg/generators:go_default_library",
     ],
@@ -32,6 +34,9 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [":package-srcs"],
+    srcs = [
+        ":package-srcs",
+        "//staging/src/k8s.io/code-generator/cmd/openapi-gen/args:all-srcs",
+    ],
     tags = ["automanaged"],
 )
