--- a/pkg/apis/core/v1/helper/BUILD
+++ b/pkg/apis/core/v1/helper/BUILD
@@ -12,6 +12,7 @@ go_test(
     importpath = "k8s.io/kubernetes/pkg/apis/core/v1/helper",
     library = ":go_default_library",
     deps = [
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/equality:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
