--- a/cluster/addons/kube-proxy/kube-proxy-ds.yaml
+++ b/cluster/addons/kube-proxy/kube-proxy-ds.yaml
@@ -57,6 +57,18 @@ spec:
         - mountPath: /run/xtables.lock
           name: xtables-lock
           readOnly: false
+      initContainers:
+      - name: init-kube-proxy
+        image: gcr.io/google_containers/busybox:1.27.2
+        command:
+        - /bin/sh
+        - -c
+        - echo "{{params}}" | grep "\-\-proxy-mode=ipvs" &&
+          modprobe -a ip_vs ip_vs_rr ip_vs_wrr ip_vs_sh nf_conntrack_ipv4 ||
+          echo "didn't load ipvs related kernel modules"
+        securityContext:
+          privileged: true
+        volumeMounts:
         - mountPath: /lib/modules
           name: lib-modules
           readOnly: true
