re-factor fixture

--- a/test/integration/apps/BUILD
+++ b/test/integration/apps/BUILD
@@ -2,15 +2,22 @@ load("@io_bazel_rules_go//go:def.bzl", "go_test")
 
 go_test(
     name = "go_default_test",
+    size = "large",
     srcs = ["apps_test.go"],
+    importpath = "k8s.io/kubernetes/test/integration/apps",
+    tags = [
+        "integration",
+    ],
     deps = [
-        "//test/integration/apps/common_types:go_default_library",
         "//test/integration/apps/core:go_default_library",
         "//test/integration/apps/hrcontrollers:go_default_library",
         "//test/integration/apps/podconfig:go_default_library",
         "//test/integration/apps/podcontrollers:go_default_library",
         "//test/integration/apps/upgrades:go_default_library",
+        "//test/integration/fixtures/controlplane:go_default_library",
         "//test/integration/framework:go_default_library",
+        "//vendor/k8s.io/api/core/v1:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
     ],
 )
 
@@ -25,7 +32,6 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
-        "//test/integration/apps/common_types:all-srcs",
         "//test/integration/apps/core:all-srcs",
         "//test/integration/apps/hrcontrollers:all-srcs",
         "//test/integration/apps/podconfig:all-srcs",
