--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -43,6 +43,8 @@ filegroup(
         "//test/integration/etcd:all-srcs",
         "//test/integration/evictions:all-srcs",
         "//test/integration/examples:all-srcs",
+        "//test/integration/fixtures/controlplane:all-srcs",
+        "//test/integration/fixtures/hollownode:all-srcs",
         "//test/integration/framework:all-srcs",
         "//test/integration/garbagecollector:all-srcs",
         "//test/integration/master:all-srcs",
