--- a/test/integration/apps/upgrades/BUILD
+++ b/test/integration/apps/upgrades/BUILD
@@ -3,10 +3,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["upgrades.go"],
+    importpath = "k8s.io/kubernetes/test/integration/apps/upgrades",
     visibility = ["//visibility:public"],
     deps = [
         "//test/e2e/framework:go_default_library",
-        "//test/integration/apps/common_types:go_default_library",
+        "//test/integration/fixtures/controlplane:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
     ],
