reconcile top level BUILD

--- a/pkg/BUILD
+++ b/pkg/BUILD
@@ -11,6 +11,33 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/admission/admit:all-srcs",
+        "//pkg/admission/alwayspullimages:all-srcs",
+        "//pkg/admission/antiaffinity:all-srcs",
+        "//pkg/admission/defaulttolerationseconds:all-srcs",
+        "//pkg/admission/deny:all-srcs",
+        "//pkg/admission/eventratelimit:all-srcs",
+        "//pkg/admission/exec:all-srcs",
+        "//pkg/admission/extendedresourcetoleration:all-srcs",
+        "//pkg/admission/gc:all-srcs",
+        "//pkg/admission/imagepolicy:all-srcs",
+        "//pkg/admission/initialresources:all-srcs",
+        "//pkg/admission/limitranger:all-srcs",
+        "//pkg/admission/namespace/autoprovision:all-srcs",
+        "//pkg/admission/namespace/exists:all-srcs",
+        "//pkg/admission/noderestriction:all-srcs",
+        "//pkg/admission/persistentvolume/label:all-srcs",
+        "//pkg/admission/persistentvolume/resize:all-srcs",
+        "//pkg/admission/persistentvolumeclaim/pvcprotection:all-srcs",
+        "//pkg/admission/podnodeselector:all-srcs",
+        "//pkg/admission/podpreset:all-srcs",
+        "//pkg/admission/podtolerationrestriction:all-srcs",
+        "//pkg/admission/priority:all-srcs",
+        "//pkg/admission/resourcequota:all-srcs",
+        "//pkg/admission/security:all-srcs",
+        "//pkg/admission/securitycontext/scdeny:all-srcs",
+        "//pkg/admission/serviceaccount:all-srcs",
+        "//pkg/admission/storageclass/setdefault:all-srcs",
         "//pkg/api/endpoints:all-srcs",
         "//pkg/api/events:all-srcs",
         "//pkg/api/legacyscheme:all-srcs",
@@ -50,6 +77,7 @@ filegroup(
         "//pkg/apis/storage:all-srcs",
         "//pkg/auth/authorizer/abac:all-srcs",
         "//pkg/auth/nodeidentifier:all-srcs",
+        "//pkg/auth:all-srcs",
         "//pkg/bootstrap/api:all-srcs",
         "//pkg/capabilities:all-srcs",
         "//pkg/client/chaosclient:all-srcs",
@@ -95,6 +123,7 @@ filegroup(
         "//pkg/quota:all-srcs",
         "//pkg/registry:all-srcs",
         "//pkg/routes:all-srcs",
+        "//pkg/scheduler:all-srcs",
         "//pkg/security:all-srcs",
         "//pkg/securitycontext:all-srcs",
         "//pkg/serviceaccount:all-srcs",
