fix BUILD files maybe

--- a/pkg/scheduler/api/BUILD
+++ b/pkg/scheduler/api/BUILD
@@ -13,7 +13,7 @@ go_library(
         "types.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/api",
+    importpath = "k8s.io/kubernetes/pkg/scheduler/api",
     deps = [
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
@@ -35,9 +35,9 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
-        "//plugin/pkg/scheduler/api/latest:all-srcs",
-        "//plugin/pkg/scheduler/api/v1:all-srcs",
-        "//plugin/pkg/scheduler/api/validation:all-srcs",
+        "//pkg/scheduler/api/latest:all-srcs",
+        "//pkg/scheduler/api/v1:all-srcs",
+        "//pkg/scheduler/api/validation:all-srcs",
     ],
     tags = ["automanaged"],
 )
