--- a/cmd/kube-scheduler/app/BUILD
+++ b/cmd/kube-scheduler/app/BUILD
@@ -18,14 +18,14 @@ go_library(
         "//pkg/features:go_default_library",
         "//pkg/kubectl/cmd/util:go_default_library",
         "//pkg/master/ports:go_default_library",
+        "//pkg/scheduler/algorithmprovider:go_default_library",
+        "//pkg/scheduler/api/latest:go_default_library",
+        "//pkg/scheduler/api:go_default_library",
+        "//pkg/scheduler/factory:go_default_library",
+        "//pkg/scheduler:go_default_library",
         "//pkg/util/configz:go_default_library",
-        "//pkg/version:go_default_library",
         "//pkg/version/verflag:go_default_library",
-        "//plugin/pkg/scheduler:go_default_library",
-        "//plugin/pkg/scheduler/algorithmprovider:go_default_library",
-        "//plugin/pkg/scheduler/api:go_default_library",
-        "//plugin/pkg/scheduler/api/latest:go_default_library",
-        "//plugin/pkg/scheduler/factory:go_default_library",
+        "//pkg/version:go_default_library",
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
         "//vendor/github.com/spf13/cobra:go_default_library",
