--- a/pkg/scheduler/algorithmprovider/BUILD
+++ b/pkg/scheduler/algorithmprovider/BUILD
@@ -9,17 +9,17 @@ load(
 go_library(
     name = "go_default_library",
     srcs = ["plugins.go"],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/algorithmprovider",
-    deps = ["//plugin/pkg/scheduler/algorithmprovider/defaults:go_default_library"],
+    importpath = "k8s.io/kubernetes/pkg/scheduler/algorithmprovider",
+    deps = ["//pkg/scheduler/algorithmprovider/defaults:go_default_library"],
 )
 
 go_test(
     name = "go_default_test",
     srcs = ["plugins_test.go"],
     embed = [":go_default_library"],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/algorithmprovider",
+    importpath = "k8s.io/kubernetes/pkg/scheduler/algorithmprovider",
     deps = [
-        "//plugin/pkg/scheduler/factory:go_default_library",
+        "//pkg/scheduler/factory:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/util/feature:go_default_library",
     ],
 )
@@ -35,7 +35,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
-        "//plugin/pkg/scheduler/algorithmprovider/defaults:all-srcs",
+        "//pkg/scheduler/algorithmprovider/defaults:all-srcs",
     ],
     tags = ["automanaged"],
 )
