--- a/pkg/scheduler/api/v1/BUILD
+++ b/pkg/scheduler/api/v1/BUILD
@@ -13,9 +13,9 @@ go_library(
         "types.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/api/v1",
+    importpath = "k8s.io/kubernetes/pkg/scheduler/api/v1",
     deps = [
-        "//plugin/pkg/scheduler/api:go_default_library",
+        "//pkg/scheduler/api:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
