--- a/pkg/scheduler/api/validation/BUILD
+++ b/pkg/scheduler/api/validation/BUILD
@@ -9,9 +9,9 @@ load(
 go_library(
     name = "go_default_library",
     srcs = ["validation.go"],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/api/validation",
+    importpath = "k8s.io/kubernetes/pkg/scheduler/api/validation",
     deps = [
-        "//plugin/pkg/scheduler/api:go_default_library",
+        "//pkg/scheduler/api:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
     ],
 )
@@ -20,8 +20,8 @@ go_test(
     name = "go_default_test",
     srcs = ["validation_test.go"],
     embed = [":go_default_library"],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/api/validation",
-    deps = ["//plugin/pkg/scheduler/api:go_default_library"],
+    importpath = "k8s.io/kubernetes/pkg/scheduler/api/validation",
+    deps = ["//pkg/scheduler/api:go_default_library"],
 )
 
 filegroup(
