--- a/pkg/scheduler/schedulercache/BUILD
+++ b/pkg/scheduler/schedulercache/BUILD
@@ -8,12 +8,12 @@ go_library(
         "node_info.go",
         "util.go",
     ],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/schedulercache",
+    importpath = "k8s.io/kubernetes/pkg/scheduler/schedulercache",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/apis/core/v1/helper:go_default_library",
-        "//plugin/pkg/scheduler/algorithm/priorities/util:go_default_library",
-        "//plugin/pkg/scheduler/util:go_default_library",
+        "//pkg/scheduler/algorithm/priorities/util:go_default_library",
+        "//pkg/scheduler/util:go_default_library",
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/api/policy/v1beta1:go_default_library",
@@ -28,10 +28,10 @@ go_test(
     name = "go_default_test",
     srcs = ["cache_test.go"],
     embed = [":go_default_library"],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/schedulercache",
+    importpath = "k8s.io/kubernetes/pkg/scheduler/schedulercache",
     deps = [
-        "//plugin/pkg/scheduler/algorithm/priorities/util:go_default_library",
-        "//plugin/pkg/scheduler/util:go_default_library",
+        "//pkg/scheduler/algorithm/priorities/util:go_default_library",
+        "//pkg/scheduler/util:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/api/policy/v1beta1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
