--- a/test/integration/auth/BUILD
+++ b/test/integration/auth/BUILD
@@ -43,10 +43,10 @@ go_test(
         "//pkg/registry/rbac/role/storage:go_default_library",
         "//pkg/registry/rbac/rolebinding:go_default_library",
         "//pkg/registry/rbac/rolebinding/storage:go_default_library",
-        "//plugin/pkg/admission/admit:go_default_library",
-        "//plugin/pkg/admission/noderestriction:go_default_library",
-        "//plugin/pkg/auth/authenticator/token/bootstrap:go_default_library",
-        "//plugin/pkg/auth/authorizer/rbac:go_default_library",
+        "//pkg/admission/admit:go_default_library",
+        "//pkg/admission/noderestriction:go_default_library",
+        "//pkg/auth/authenticator/token/bootstrap:go_default_library",
+        "//pkg/auth/authorizer/rbac:go_default_library",
         "//test/e2e/lifecycle/bootstrap:go_default_library",
         "//test/integration:go_default_library",
         "//test/integration/framework:go_default_library",
