--- a/pkg/auth/authorizer/rbac/bootstrappolicy/BUILD
+++ b/pkg/auth/authorizer/rbac/bootstrappolicy/BUILD
@@ -34,13 +34,13 @@ go_test(
     ]),
     importpath = "k8s.io/kubernetes/pkg/auth/authorizer/rbac/bootstrappolicy_test",
     deps = [
-        ":go_default_library",
         "//pkg/api/legacyscheme:go_default_library",
         "//pkg/apis/core:go_default_library",
         "//pkg/apis/core/install:go_default_library",
         "//pkg/apis/rbac:go_default_library",
         "//pkg/apis/rbac/install:go_default_library",
         "//pkg/registry/rbac/validation:go_default_library",
+        "//plugin/pkg/auth/authorizer/rbac/bootstrappolicy:go_default_library",
         "//vendor/github.com/ghodss/yaml:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/api/rbac/v1:go_default_library",
