fix deployment apiVersion

--- a/cluster/addons/registry/registry-deploy.yaml
+++ b/cluster/addons/registry/registry-deploy.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
   name: registry
