wip start moving ncsp logic to a separate controller

--- a/pkg/controller/BUILD
+++ b/pkg/controller/BUILD
@@ -118,6 +118,7 @@ filegroup(
         "//pkg/controller/job:all-srcs",
         "//pkg/controller/namespace:all-srcs",
         "//pkg/controller/node:all-srcs",
+        "//pkg/controller/nodeconfig:all-srcs",
         "//pkg/controller/podautoscaler:all-srcs",
         "//pkg/controller/podgc:all-srcs",
         "//pkg/controller/replicaset:all-srcs",
