Fix scheduler refs in BUILD files.
Update references to moved scheduler code.

--- a/pkg/scheduler/BUILD
+++ b/pkg/scheduler/BUILD
@@ -10,17 +10,17 @@ go_test(
     name = "go_default_test",
     srcs = ["scheduler_test.go"],
     embed = [":go_default_library"],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler",
+    importpath = "k8s.io/kubernetes/pkg/scheduler",
     deps = [
         "//pkg/api/legacyscheme:go_default_library",
         "//pkg/controller/volume/persistentvolume:go_default_library",
-        "//plugin/pkg/scheduler/algorithm:go_default_library",
-        "//plugin/pkg/scheduler/algorithm/predicates:go_default_library",
-        "//plugin/pkg/scheduler/core:go_default_library",
-        "//plugin/pkg/scheduler/schedulercache:go_default_library",
-        "//plugin/pkg/scheduler/testing:go_default_library",
-        "//plugin/pkg/scheduler/util:go_default_library",
-        "//plugin/pkg/scheduler/volumebinder:go_default_library",
+        "//pkg/scheduler/algorithm:go_default_library",
+        "//pkg/scheduler/algorithm/predicates:go_default_library",
+        "//pkg/scheduler/core:go_default_library",
+        "//pkg/scheduler/schedulercache:go_default_library",
+        "//pkg/scheduler/testing:go_default_library",
+        "//pkg/scheduler/util:go_default_library",
+        "//pkg/scheduler/volumebinder:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
@@ -39,17 +39,17 @@ go_library(
         "scheduler.go",
         "testutil.go",
     ],
-    importpath = "k8s.io/kubernetes/plugin/pkg/scheduler",
+    importpath = "k8s.io/kubernetes/pkg/scheduler",
     deps = [
         "//pkg/features:go_default_library",
-        "//plugin/pkg/scheduler/algorithm:go_default_library",
-        "//plugin/pkg/scheduler/algorithm/predicates:go_default_library",
-        "//plugin/pkg/scheduler/api:go_default_library",
-        "//plugin/pkg/scheduler/core:go_default_library",
-        "//plugin/pkg/scheduler/metrics:go_default_library",
-        "//plugin/pkg/scheduler/schedulercache:go_default_library",
-        "//plugin/pkg/scheduler/util:go_default_library",
-        "//plugin/pkg/scheduler/volumebinder:go_default_library",
+        "//pkg/scheduler/algorithm:go_default_library",
+        "//pkg/scheduler/algorithm/predicates:go_default_library",
+        "//pkg/scheduler/api:go_default_library",
+        "//pkg/scheduler/core:go_default_library",
+        "//pkg/scheduler/metrics:go_default_library",
+        "//pkg/scheduler/schedulercache:go_default_library",
+        "//pkg/scheduler/util:go_default_library",
+        "//pkg/scheduler/volumebinder:go_default_library",
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
@@ -73,16 +73,16 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
-        "//plugin/pkg/scheduler/algorithm:all-srcs",
-        "//plugin/pkg/scheduler/algorithmprovider:all-srcs",
-        "//plugin/pkg/scheduler/api:all-srcs",
-        "//plugin/pkg/scheduler/core:all-srcs",
-        "//plugin/pkg/scheduler/factory:all-srcs",
-        "//plugin/pkg/scheduler/metrics:all-srcs",
-        "//plugin/pkg/scheduler/schedulercache:all-srcs",
-        "//plugin/pkg/scheduler/testing:all-srcs",
-        "//plugin/pkg/scheduler/util:all-srcs",
-        "//plugin/pkg/scheduler/volumebinder:all-srcs",
+        "//pkg/scheduler/algorithm:all-srcs",
+        "//pkg/scheduler/algorithmprovider:all-srcs",
+        "//pkg/scheduler/api:all-srcs",
+        "//pkg/scheduler/core:all-srcs",
+        "//pkg/scheduler/factory:all-srcs",
+        "//pkg/scheduler/metrics:all-srcs",
+        "//pkg/scheduler/schedulercache:all-srcs",
+        "//pkg/scheduler/testing:all-srcs",
+        "//pkg/scheduler/util:all-srcs",
+        "//pkg/scheduler/volumebinder:all-srcs",
     ],
     tags = ["automanaged"],
 )
