update core-dns config and bump coredns/kube-dns version(apiVersion and image)

--- a/cluster/addons/dns/coredns.yaml.in
+++ b/cluster/addons/dns/coredns.yaml.in
@@ -59,15 +59,16 @@ data:
         errors
         log
         health
-        kubernetes {{ pillar['dns_domain'] }} {{ pillar['service_cluster_ip_range'] }} {
+        kubernetes {{ pillar['dns_domain'] }} {{ pillar['service_cluster_ip_range'] }} {{ pillar['cluster_cidr'] }}{
             pods insecure
+            upstream /etc/resolv.conf
         }
-        prometheus
+        prometheus :9153
         proxy . /etc/resolv.conf
         cache 30
     }
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: coredns
@@ -95,7 +96,7 @@ spec:
           operator: "Exists"
       containers:
       - name: coredns
-        image: coredns/coredns:1.0.1
+        image: coredns/coredns:1.0.2
         imagePullPolicy: IfNotPresent
         resources:
           limits:
