--- a/cluster/addons/calico-policy-controller/calico-node-daemonset.yaml
+++ b/cluster/addons/calico-policy-controller/calico-node-daemonset.yaml
@@ -1,5 +1,5 @@
 kind: DaemonSet
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 metadata:
   name: calico-node
   namespace: kube-system
@@ -32,7 +32,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: calico/node:v2.6.1
+          image: calico/node:v3.0.1
           env:
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
@@ -64,6 +64,9 @@ spec:
               value: "true"
           securityContext:
             privileged: true
+          resources:
+            requests:
+              cpu: 250m
           livenessProbe:
             httpGet:
               path: /liveness
@@ -80,48 +83,24 @@ spec:
             - mountPath: /lib/modules
               name: lib-modules
               readOnly: true
-            - mountPath: /etc/calico
-              name: etc-calico
-              readOnly: true
+            - mountPath: /var/run/calico
+              name: var-run-calico
+              readOnly: false
         # This container installs the Calico CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-          image: calico/cni:v1.11.0
+          image: quay.io/calico/cni:v2.0.0
           command: ["/install-cni.sh"]
           env:
+            # Name of the CNI config file to create.
             - name: CNI_CONF_NAME
               value: "10-calico.conflist"
+            # The CNI network config to install on each node.
             - name: CNI_NETWORK_CONFIG
-              value: |-
-                {
-                  "name": "k8s-pod-network",
-                  "cniVersion": "0.3.0",
-                  "plugins": [
-                    {
-                      "type": "calico",
-                      "log_level": "debug",
-                      "datastore_type": "kubernetes",
-                      "nodename": "__KUBERNETES_NODE_NAME__",
-                      "ipam": {
-                        "type": "host-local",
-                        "subnet": "usePodCidr"
-                      },
-                      "policy": {
-                        "type": "k8s",
-                        "k8s_auth_token": "__SERVICEACCOUNT_TOKEN__"
-                      },
-                      "kubernetes": {
-                        "k8s_api_root": "https://__KUBERNETES_SERVICE_HOST__:__KUBERNETES_SERVICE_PORT__",
-                        "kubeconfig": "__KUBECONFIG_FILEPATH__"
-                      }
-                    },
-                    {
-                      "type": "portmap",
-                      "capabilities": {"portMappings": true},
-                      "snat": true
-                    }
-                  ]
-                }
+              valueFrom:
+                configMapKeyRef:
+                  name: calico-config
+                  key: cni_network_config
             - name: KUBERNETES_NODE_NAME
               valueFrom:
                 fieldRef:
@@ -136,10 +115,9 @@ spec:
         - name: lib-modules
           hostPath:
             path: /lib/modules
-        # Mount in the Felix config file from the host.
-        - name: etc-calico
+        - name: var-run-calico
           hostPath:
-            path: /etc/calico
+            path: /var/run/calico
         # Used to install CNI binaries.
         - name: cni-bin-dir
           hostPath:
@@ -149,10 +127,12 @@ spec:
           hostPath:
             path: /etc/cni/net.d
       tolerations:
-        # Make sure calico/node gets scheduled on all nodes.
+        # Allow the pod to run on the master.  This is required for
+        # the master to communicate with pods.
         - effect: NoSchedule
           operator: Exists
         - effect: NoExecute
           operator: Exists
+        # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
           operator: Exists
