--- a/cluster/addons/calico-policy-controller/globalfelixconfig-crd.yaml
+++ b/cluster/addons/calico-policy-controller/globalfelixconfig-crd.yaml
@@ -1,8 +1,8 @@
 apiVersion: apiextensions.k8s.io/v1beta1
-description: Calico Global Felix Configuration
+description: Calico Felix Configuration
 kind: CustomResourceDefinition
 metadata:
-  name: globalfelixconfigs.crd.projectcalico.org
+  name: felixconfigurations.crd.projectcalico.org
   labels:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
@@ -11,6 +11,6 @@ spec:
   group: crd.projectcalico.org
   version: v1
   names:
-    kind: GlobalFelixConfig
-    plural: globalfelixconfigs
-    singular: globalfelixconfig
+    kind: FelixConfiguration
+    plural: felixconfigurations
+    singular: felixconfiguration
