--- a/cluster/addons/calico-policy-controller/globalinfo-crd.yaml
+++ b/cluster/addons/calico-policy-controller/globalinfo-crd.yaml
@@ -1,8 +1,8 @@
 apiVersion: apiextensions.k8s.io/v1beta1
-description: Calico BGP Configuration
+description: Calico Cluster Information
 kind: CustomResourceDefinition
 metadata:
-  name: bgpconfigurations.crd.projectcalico.org
+  name: clusterinformations.crd.projectcalico.org
   labels:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
@@ -11,6 +11,6 @@ spec:
   group: crd.projectcalico.org
   version: v1
   names:
-    kind: BGPConfiguration
-    plural: bgpconfigurations
-    singular: bgpconfiguration
+    kind: ClusterInformation
+    plural: clusterinformations
+    singular: clusterinformation
