--- a/cluster/addons/ip-masq-agent/ip-masq-agent.yaml
+++ b/cluster/addons/ip-masq-agent/ip-masq-agent.yaml
@@ -9,13 +9,13 @@ metadata:
     addonmanager.kubernetes.io/mode: Reconcile
 ---
 # https://github.com/kubernetes-incubator/ip-masq-agent/blob/v2.0.0/README.md
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: ip-masq-agent
   namespace: kube-system
   labels:
-    addonmanager.kubernetes.io/mode: Reconcile  
+    addonmanager.kubernetes.io/mode: Reconcile
 spec:
   template:
     metadata:
@@ -39,7 +39,7 @@ spec:
           - name: config
             mountPath: /etc/config
       nodeSelector:
-        beta.kubernetes.io/masq-agent-ds-ready: "true"  
+        beta.kubernetes.io/masq-agent-ds-ready: "true"
       volumes:
         - name: config
           configMap:
