golang/dep: add prune setting to Gopkg.toml

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,6 +20,10 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
+[prune]
+  non-go = true
+  go-tests = true
+  unused-packages = true
 
 [[constraint]]
   branch = "master"
